# jupyter-vscode-template

./: .gitignore  Dockerfile  README.md  docker-compose.yml
.devcontainer/: devcontainer.json
jupyter/: pyproject.toml
jupyter/notebook/: Sample.ipynb
